<resources>
    <string name="app_name">HISTORIC TESTS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ParagraphLabelValue">Параграф: </string>
    <string name="TaskLabelValue">Завдання: </string>
    <string name="testButtonText">Тест</string>
    <string name="descriptionIcon4">checkIcons</string>
    <string name="descriptionIcon3">checkIcon</string>
    <string name="descriptionIcon2">checkIcon</string>
    <string name="descriptionIcon1">checkIcon</string>
</resources>
